<?xml version="1.0" encoding="utf-8"?>
<!-- modal_setting.xml -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/modalWidth"
    android:layout_height="@dimen/modalHeight"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/backgroudPopUpAction3"
        android:gravity="center">

        <TextView
            android:id="@+id/action3_howToPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/InfoAction3_headerTextSize"
            android:layout_marginBottom="@dimen/InfoAction3_marginBottom"
            android:text="@string/action3_howToPlay" />
        <TextView
            android:id="@+id/action3_medthod1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/action6_medthod1" />
        <TextView
            android:id="@+id/action3_medthod2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:text="@string/action6_medthod2" />
        <TextView
            android:id="@+id/action3_medthod3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:layout_marginBottom="@dimen/InfoAction3_marginBottom"
            android:text="@string/action6_medthod3" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="@dimen/btnModal_w"
            android:layout_height="wrap_content"
            android:text="@string/action3_btnOK"
            android:textSize="@dimen/InfoAction3_okBtnTextSize"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:backgroundTint="@color/btn"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>