<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundAction6">


    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerAction6_height"
        android:text="@string/action6_header"
        android:background="@color/headerAction6"
        android:textSize="@dimen/headerAction6_textSize"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:shadowColor="@color/shadowAction6"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="4"/>

    <ImageView
        android:id="@+id/btnInformation"
        android:layout_width="@dimen/btnSetting"
        android:layout_height="@dimen/btnSetting"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/btnSettingMargin"
        android:layout_marginTop="@dimen/btnSettingMargin"
        app:srcCompat="@drawable/information_icon"
        android:contentDescription="@string/action3_howToPlay"/>
    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/timerAction6_textSize"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/text"
        android:layout_marginTop="@dimen/marginTopAction6"
        android:layout_marginBottom="@dimen/marginBottomAction6"
        android:text="@string/action6_timeLeft" />

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:gravity="center"
        android:horizontalSpacing="@dimen/spacingAction6"
        android:numColumns="2"
        android:padding="@dimen/spacingAction6"
        android:stretchMode="columnWidth"
        android:textColorHint="@color/text"
        android:verticalSpacing="@dimen/spacingAction6" />

</LinearLayout>