<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/scene"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/scene_2_1"
            tools:ignore="ContentDescription"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/imgSetting"
            android:layout_width="@dimen/btnSetting"
            android:layout_height="@dimen/btnSetting"
            android:layout_marginStart="@dimen/btnSettingMargin"
            android:layout_marginTop="@dimen/btnSettingMargin"
            app:srcCompat="@drawable/setting"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/bg_text"
            tools:ignore="ContentDescription"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/textScene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/marginStartEnd"
            android:layout_marginTop="@dimen/marginTopText_action1"
            android:layout_marginEnd="@dimen/marginStartEnd"
            android:text="@string/scene_2_1_action_1"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="@dimen/fontSize" />

        <Button
            android:id="@+id/btnBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/btnChoiceAction1_margin"
            android:layout_marginBottom="@dimen/btnNext"
            android:height="@dimen/btnChoiceAction1_h"
            android:backgroundTint="@color/btn"
            android:text="@string/action_1_black"
            android:textColor="@color/text"
            android:textSize="@dimen/fontSize" />

        <Button
            android:id="@+id/btnWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/btnChoiceAction1_margin"
            android:height="@dimen/btnChoiceAction1_h"
            android:backgroundTint="@color/btn"
            android:text="@string/action_1_white"
            android:textColor="@color/text"
            android:textSize="@dimen/fontSize" />

        <Button
            android:id="@+id/btnOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="@dimen/btnChoiceAction1_margin"
            android:layout_marginBottom="@dimen/btnNext"
            android:height="@dimen/btnChoiceAction1_h"
            android:backgroundTint="@color/btn"
            android:text="@string/action_1_orange"
            android:textColor="@color/text"
            android:textSize="@dimen/fontSize" />

    </FrameLayout>
</LinearLayout>